--- a/Cookies.html
+++ b/Cookies.html
@@ -4,9 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cookie Clicker</title>
+
+
+  <link rel="icon" href="Images/Cookie.png" type="image/png">
   <link rel="stylesheet" href="cookies.css">
 </head>
 <body>
+
+  <div class="hover-container" id="hover-box"></div>
+  <div class="change-name-container"></div>
+
   <div class="main-container">
     <div class="cookie-container">
 
