--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Cookie Clicker</title>
 
 
-  <link rel="icon" href="Images/Cookie.png" type="image/png">
+  <link rel="icon" href="Images/cookie.png" type="image/png">
   <link rel="stylesheet" href="cookies.css">
 </head>
 <body>
@@ -98,6 +98,6 @@
   </div>
     </div>
     
-  <script type="module" src="Cookies.js"></script>
+  <script type="module" src="cookies.js"></script>
 </body>
 </html>
